--- a/memos/ioc-container/02.bean-overview.md
+++ b/memos/ioc-container/02.bean-overview.md
@@ -23,7 +23,7 @@ Beanには、ひとつ以上のユニークな名前(ID)を付与する必要が
 > Beanにはエイリアスを複数付与することができます。
 
 
-## コンフィギュレーションクラス使用時のBean名の指定
+## コンフィギュレーションクラス使用時のBean名
 
 コンフィギュレーションクラスを使ってbeanを定義する場合は、デフォルトではメソッド名がBean名になります。
 メソッド名以外の名前にしたい場合は、`@Bean`の`name`属性にユニークな名前を指定してください。
@@ -58,7 +58,7 @@ TestBean createTestBean() {
 }
 ```
 
-## コンポーネントスキャン使用時のBean名の指定
+## コンポーネントスキャン使用時のBean名
 
 コンポーネントスキャンを使用してBean定義を行う場合は、デフォルトではクラス名のLower Camelcaseになります。
 クラス名のLower Camelcase以外の名前にしたい場合は、`@Component` (or `@Component`を含むメタアノテーション)の`value`属性にユニークな名前を指定してください。
@@ -88,38 +88,40 @@ public class TestBeanImpl {
 }
 ```
 
-デフォルトのBean名の生成ルール(クラス名のLower Camelcase)は、`BeanNameGenerator`インタフェースの実装クラスを作成することでカスタマイズすることができます。
-以下の例では、デフォルトのBean名の生成ルールをベースに、最後の`"Impl"`という文字列を削除するという実装になっています。
+> **Note:**
+>
+> デフォルトのBean名の生成ルール(クラス名のLower Camelcase)は、`BeanNameGenerator`インタフェースの実装クラスを作成することでカスタマイズすることができます。
+> 以下の例では、デフォルトのBean名の生成ルールをベースに、最後の`"Impl"`という文字列を削除するという実装になっています。
+>
+> **BeanNameGeneratorインタフェースの実装クラス**
+>
+> ```java
+> public class TrimmingImplAnnotationBeanNameGenerator extends AnnotationBeanNameGenerator {
+>     @Override
+>     public String generateBeanName(BeanDefinition definition, BeanDefinitionRegistry registry) {
+>         return super.generateBeanName(definition, registry).replaceAll("Impl$", "");
+>     }
+> }
+> ```
+>
+> **BeanNameGeneratorインタフェースの実装クラスの適用**
+>
+> ```java
+> @ComponentScan(nameGenerator = TrimmingImplAnnotationBeanNameGenerator.class)
+> public class AppConfig {
+> }
+>
+> ```
+>
+> or
+>
+> ```xml
+> <context:component-scan
+>         base-package="com.github.kazuki43zoo.container"
+>         name-generator="com.github.kazuki43zoo.container.TrimmingImplAnnotationBeanNameGenerator"/>
+> ```
 
-**BeanNameGeneratorインタフェースの実装クラス**
-
-```java
-public class TrimmingImplAnnotationBeanNameGenerator extends AnnotationBeanNameGenerator {
-    @Override
-    public String generateBeanName(BeanDefinition definition, BeanDefinitionRegistry registry) {
-        return super.generateBeanName(definition, registry).replaceAll("Impl$", "");
-    }
-}
-```
-
-**BeanNameGeneratorインタフェースの実装クラスの適用**
-
-```java
-@ComponentScan(nameGenerator = TrimmingImplAnnotationBeanNameGenerator.class)
-public class AppConfig {
-}
-
-```
-
-or
-
-```xml
-<context:component-scan
-        base-package="com.github.kazuki43zoo.container"
-        name-generator="com.github.kazuki43zoo.container.TrimmingImplAnnotationBeanNameGenerator"/>
-```
-
-## bean定義ファイル使用時のBean名の指定
+## bean定義ファイル使用時のBean名
 
 bean定義ファイルを使ってbeanを定義する場合は、`<bean>`要素の`id`属性か`name`属性にユニークな名前を指定します。
 `name`属性には複数(2つめ以降はエイリアスとして扱われる)の名前を指定することができます。
