--- a/memos/ioc-container/02.bean-overview.md
+++ b/memos/ioc-container/02.bean-overview.md
@@ -210,6 +210,8 @@ SpringのIoC Containerは、Beanのインスタンスは、以下のいずれか
 > **Note:**
 >
 > staticなインナークラスのBeanを生成する場合は、`class`属性に「インナークラスが定義されているクラスのFQCN + "$" + インナークラスのクラス名」形式で指定すればよい。
+>
+> 例: com.github.kazuki43zoo.container.TestBean$InnerBean
 
 ここではデフォルトコンストラクタを呼び出す例になっています。
 
