--- a/memos/ioc-container/02.bean-overview.md
+++ b/memos/ioc-container/02.bean-overview.md
@@ -325,3 +325,112 @@ public class TestBeanFactory {
 >     return new TestBeanFactoryBean();
 > }
 > ```
+
+
+## Bean scopes
+
+SpringのIoC Containerで管理するBeanは、Beanインスタンスのスコープ(インスタンスを共有する範囲)を指定する必要があります。
+
+Springが提供しているスコープは以下の通りですが、カスタムスコープを作成することができます。
+
+
+**汎用的なスコープ(非Web依存)**
+
+| Scope | Description |
+| :---: | ----------- |
+| singleton | IoCコンテナ内でひとつだけインスタンスを生成しキャッシュするスコープです。(デフォルト) |
+| prototype | Beanの取得依頼(`ApplicationContext#getBean`)毎にインスタンスを生成するスコープです。 |
+
+> **Note:**
+>
+> `prototype`スコープはコンテナ上でインスタンス管理を行わないので、ライフサイクルコールバックメソッドの破棄メソッドは呼ばれません。
+
+**Webアプリケーション用のスコープ**
+
+| Scope | Description |
+| :---: | ----------- |
+| application | サーブレットコンテキスト毎にインスタンスを生成しキャッシュするスコープです。 |
+| global session | グルーバルHTTPセッション毎にインスタンスを生成しキャッシュするスコープです。このスコープはPortlet用のスコープです。 |
+| session | HTTPセッション毎にインスタンスを生成しキャッシュするスコープです。 |
+| request | HTTPサーブレットリクエスト毎にインスタンスを生成しキャッシュするスコープです。|
+
+> **Note:**
+>
+> デフォルトでは使用できませんが、Spring 3からスレッドスコープの実装クラスが提供されています。
+> ただし、いくつか制約があるので使用する際は[JavaDoc](http://docs.spring.io/spring/docs/current/javadoc-api/org/springframework/context/support/SimpleThreadScope.html)を必ず読んでください（基本的には使用しないのが無難）。
+> また、Webアプリケーション環境においては、スレッドスコープではなくリクエストスコープを使うようにしてください。
+
+### コンフィギュレーションクラスでのスコープの指定
+
+デフォルトのスコープは`singleton`です。
+デフォルトのスコープを変更したい場合は、`@Bean`を付与したメソッドに、`@Scope`を付与して任意のスコープを指定してください。
+
+**デフォルトスコープ**
+
+```java
+@Bean
+TestBean testBean(){
+    return new TestBean();
+}
+```
+
+**任意のスコープ(prototype)**
+
+```java
+@Bean
+@Scope(BeanDefinition.SCOPE_PROTOTYPE)
+TestBean testBean(){
+    return new TestBean();
+}
+```
+
+> **Note:**
+>
+> 各スコープの定数は、以下のインタフェースに定義されています。
+>
+> * 汎用スコープ：`BeanDefinition`
+> * Webアプリケーション用スコープ：`WebApplicationContext`
+
+### bean定義ファイルでのスコープの指定
+
+デフォルトのスコープは`singleton`です。
+デフォルトのスコープを変更したい場合は、`<bean>`要素の`scope`属性に任意のスコープを指定してください。
+
+**デフォルトスコープ**
+
+```xml
+<bean id="testBean" class="com.github.kazuki43zoo.container.TestBean"/>
+```
+
+**任意のスコープ(prototype)**
+
+```xml
+<bean id="testBean"
+      class="com.github.kazuki43zoo.container.TestBean"
+      scope="prototype"/>
+```
+
+
+### アノテーションでのスコープの指定
+
+デフォルトのスコープは`singleton`です。
+デフォルトのスコープを変更したい場合は、クラスアノテーションとして`@Scope`を付与して任意のスコープを指定してください。
+
+**デフォルトスコープ**
+
+```java
+@Component
+public class TestBean {
+    // ...
+}
+```
+
+**任意のスコープ(prototype)**
+
+```java
+@Component
+@Scope(BeanDefinition.SCOPE_PROTOTYPE)
+public class TestBean {
+    // ...
+}
+```
