--- a/memos/ioc-container/02.bean-overview.md
+++ b/memos/ioc-container/02.bean-overview.md
@@ -311,6 +311,20 @@ public class TestBeanFactory {
 
 `<bean>`要素の`class`属性に`FactoryBean`インタフェースを実装したクラスのクラス名(FQCN)を指定すると、指定したクラスの`getObject()`メソッドを呼び出してBeanを生成します。
 
+```java
+public class TestBeanFactoryBean implements FactoryBean<TestBean> {
+    public TestBean getObject() throws Exception {
+        return new TestBean();
+    }
+    public Class<?> getObjectType() {
+        return TestBean.class;
+    }
+    public boolean isSingleton() {
+        return true;
+    }
+}
+```
+
 ```xml
 <bean id="testBean" class="com.github.kazuki43zoo.container.TestBeanFactoryBean"/>
 ```
