--- a/memos/ioc-container/02.bean-overview.md
+++ b/memos/ioc-container/02.bean-overview.md
@@ -313,7 +313,7 @@ public class TestBeanFactory {
 
 ```java
 public class TestBeanFactoryBean implements FactoryBean<TestBean> {
-    public TestBean getObject() throws Exception {
+    public TestBean getObject() {
         return new TestBean();
     }
     public Class<?> getObjectType() {
