--- a/memos/ioc-container/02.bean-basic.md
+++ b/memos/ioc-container/02.bean-basic.md
@@ -347,6 +347,10 @@ public class TestBeanFactoryBean implements FactoryBean<TestBean> {
 ただし、`singleton`と呼ばれるスコープの場合は、IoC Containerの初期化時にインスタンスを生成します。
 この動きは遅延初期化(Beanの取得依頼があったタイミング)に変えることもできます。
 
+### `singleton`と呼ばれるスコープのBeanの遅延初期化(Lazy init)
+
+`singleton`と呼ばれるスコープのBeanのインスタン生成のタイミングを変更する場合(遅延初期化に変更する場合)は、以下のようなBean定義にします。
+
 **コンフィギュレーションクラス**
 
 遅延初期化に変更する場合は、`@Bean`メソッドに`@Lazy`を付与する。
