--- a/memos/ioc-container/02.bean-basic.md
+++ b/memos/ioc-container/02.bean-basic.md
@@ -386,6 +386,13 @@ public class TestBean {
       lazy-init="true"/> <!-- ★ -->
 ```
 
+## Default metadata configuration
+
+> **Sorry:**
+>
+> あとで・・・ `<bean>`要素の`default-xxxx`属性について記載。
+
+
 ## Bean scopes
 
 SpringのIoC Containerで管理するBeanは、Beanインスタンスのスコープ(インスタンスを共有する範囲)を指定する必要があります。
