--- a/memos/ioc-container/01.container-overview.md
+++ b/memos/ioc-container/01.container-overview.md
@@ -175,6 +175,21 @@ ConfigurableApplicationContext context =
         new ClassPathXmlApplicationContext("applicationContext.xml");
 ```
 
+## Startup and shutdown callbacks
+
+SpringのIoC Containerを使ったアプリケーションを起動・終了などコンテナのライフサイクルイベントをコールバックメソッドで受け取れる仕組みを提供しています。
+
+コンテナのライフサイクルイベントを受け取るためのインタフェースは以下の通り。
+
+* `Lifecycle`インタフェース (`start()`, `stop()`, `boolean isRunning()`)
+* `LifecycleProcessor`インタフェース (`Lifecycle` + `onRefresh()`, `onClose()`)
+* `SmartLifecycle`インタフェース (`Lifecycle` + `int getPhase()`, `boolean isAutoStartup()`, `stop(Runnable callback)`)
+
+> **Sorry:**
+>
+> 詳細はあとで・・
+
+
 ## Shutting down the Spring IoC container
 
 SpringのIoC Containerを使ったアプリケーションを終了する場合は、IoC Containerを停止する必要があります。
