--- a/memos/ioc-container/02.bean-basic.md
+++ b/memos/ioc-container/02.bean-basic.md
@@ -386,7 +386,40 @@ public class TestBean {
       lazy-init="true"/> <!-- ★ -->
 ```
 
-## Default metadata configuration
+## Lifecycle callbacks
+
+### Initialization callbacks
+
+Beanの生成と依存性の解決が終了した直後に、ターゲットのBeanのコールバックメソッドを直接呼びます。
+これは、AOPなどが適用されてないことを意味しており、たとえば宣言型のトランザクション管理などが使用できないことを意味します。
+
+コールバックの仕組みは複数あり、以下の順で実行されます。
+
+* `@PostConstruct`
+* `InitializingBean#afterPropertiesSet()`
+* `<bean>`要素の`init-method`属性 (`@Bean`の`initMethod`属性)
+
+> **Note:**
+>
+> `<beans>`の`default-init-method`属性でデフォルトの初期化メソッド(メソッド名)を指定することができる。
+
+### Destruction callbacks
+
+コールバックの仕組みは複数あり、以下の順で実行されます。
+
+なお、`prototype`スコープのBeanインスタンスはIoC Container上で管理していないのでコールバックメソッドは呼ばれません。
+
+* `@PreDestroy`
+* `DisposableBean#destroy()`
+* `<bean>`要素の`destroy-method`属性 (`@Bean`の`destroyMethod`属性)
+
+> **Note:**
+>
+> `<beans>`の`default-destroy-method`属性でデフォルトの初期化メソッド(メソッド名)を指定することができる。
+
+
+
+## Default default metadata configuration
 
 > **Sorry:**
 >
