--- a/memos/ioc-container/03.dependency-injection.md
+++ b/memos/ioc-container/03.dependency-injection.md
@@ -455,7 +455,7 @@ Springは以下のルール(モード)に基づいてインジェクションす
 | `no` | オートワイアを無効にします。 |
 | `byName` | プロパティ名と同名のBeanをインジェクションします。同名のBeanが存在しない場合はエラーになります。 |
 | `byType` | プロパティの型と同じ型(キャスト可能な型)のBeanをインジェクションします。複数候補がみつかるとエラーとなり、候補がない場合はエラーではなくインジェクションが行われません。 |
-| `constructor` | コンストラクタ引数の型と同じ型(キャスト可能な型)のBeanをインジェクションします。基本的には`byType`と同じ動きになります。 |
+| `constructor` | コンストラクタ引数の型と同じ型(キャスト可能な型)のBeanをインジェクションします。基本的には`byType`と同じ動きになりますが、インジェクション対象のBeanがみつからない場合はエラーになります。 |
 
 
 **コンフィギュレーションクラスでの指定**
