--- a/memos/ioc-container/02.bean-basic.md
+++ b/memos/ioc-container/02.bean-basic.md
@@ -404,10 +404,65 @@ Beanの生成と依存性の解決が終了した直後に、ターゲットのB
 これは、AOPなどが適用されてないことを意味しており、たとえば宣言型のトランザクション管理などが使用できないことを意味します。
 
 コールバックの仕組みは複数あり、以下の順で実行されます。
+各コールバックに同じメソッドを指定した場合は、IoC Containerからの呼び出しは一回になります。
 
 * `@PostConstruct`
 * `InitializingBean#afterPropertiesSet()`
 * `<bean>`要素の`init-method`属性 (`@Bean`の`initMethod`属性)
+
+**`@PostConstruct`**
+
+初期化メソッドに`@PostConstruct`を付与します。
+
+```java
+public class MasterCache {
+    // ...
+    @PostConstruct
+    public load(){
+        // ...
+    }
+    // ...
+}
+```
+
+**`InitializingBean#afterPropertiesSet()`**
+
+`InitializingBean`インタフェースを実装し、`afterPropertiesSet`メソッドに破棄処理を実装します。
+
+```java
+public class MasterCache implements InitializingBean {
+    // ...
+    public afterPropertiesSet(){
+        // ...
+    }
+    // ...
+}
+```
+
+> **Note:**
+>
+> Springチームは、`InitializingBean`の使用をあまり奨めていません。理由はSpring固有のインタフェースを実装することでPOJOではなくなってしまうためです。
+
+
+**`<bean>`要素の`init-method`属性**
+
+`<bean>`要素の`init-method`属性に初期化メソッドのメソッド名を指定します。
+
+```java
+public class MasterCache {
+    // ...
+    public load(){
+        // ...
+    }
+    // ...
+}
+```
+
+```xml
+<bean id="masterCache"
+      class="com.github.kazuki43zoo.container.MasterCache"
+      init-method="load">
+```
 
 > **Note:**
 >
@@ -419,9 +474,67 @@ Beanの生成と依存性の解決が終了した直後に、ターゲットのB
 
 なお、`prototype`スコープのBeanインスタンスはIoC Container上で管理していないのでコールバックメソッドは呼ばれません。
 
+コールバックの仕組みは複数あり、以下の順で実行されます。
+各コールバックに同じメソッドを指定した場合は、IoC Containerからの呼び出しは一回になります。
+
 * `@PreDestroy`
 * `DisposableBean#destroy()`
 * `<bean>`要素の`destroy-method`属性 (`@Bean`の`destroyMethod`属性)
+
+**`@PreDestroy`**
+
+破棄メソッドに`@PreDestroy`を付与します。
+
+```java
+public class MasterCache {
+    // ...
+    @PreDestroy
+    public clear(){
+        // ...
+    }
+    // ...
+}
+```
+
+**`DisposableBean#destroy()`**
+
+`DisposableBean`インタフェースを実装し、`destroy`メソッドに破棄処理を実装します。
+
+```java
+public class MasterCache implements DisposableBean {
+    // ...
+    public destroy(){
+        // ...
+    }
+    // ...
+}
+```
+
+
+> **Note:**
+>
+> Springチームは、`DisposableBean`の使用をあまり奨めていません。理由はSpring固有のインタフェースを実装することでPOJOではなくなってしまうためです。
+
+
+**`<bean>`要素の`destroy-method`属性**
+
+`<bean>`要素の`init-destroy`属性に破棄化メソッドのメソッド名を指定します。
+
+```java
+public class MasterCache {
+    // ...
+    public clear(){
+        // ...
+    }
+    // ...
+}
+```
+
+```xml
+<bean id="masterCache"
+      class="com.github.kazuki43zoo.container.MasterCache"
+      destroy-method="clear">
+```
 
 > **Note:**
 >
