--- a/memos/ioc-container/02.bean-basic.md
+++ b/memos/ioc-container/02.bean-basic.md
@@ -448,6 +448,10 @@ public class MasterCache implements InitializingBean {
 
 `<bean>`要素の`init-method`属性に初期化メソッドのメソッド名を指定します。
 
+> **Note:**
+>
+> `<beans>`の`default-init-method`属性でデフォルトの初期化メソッド(メソッド名)を指定することができる。
+
 ```java
 public class MasterCache {
     // ...
@@ -463,10 +467,6 @@ public class MasterCache {
       class="com.github.kazuki43zoo.container.MasterCache"
       init-method="load">
 ```
-
-> **Note:**
->
-> `<beans>`の`default-init-method`属性でデフォルトの初期化メソッド(メソッド名)を指定することができる。
 
 ### Beanの破棄用のコールバックインタフェース
 
@@ -518,6 +518,11 @@ public class MasterCache implements DisposableBean {
 
 `<bean>`要素の`init-destroy`属性に破棄化メソッドのメソッド名を指定します。
 
+> **Note:**
+>
+> `<beans>`の`default-destroy-method`属性でデフォルトの初期化メソッド(メソッド名)を指定することができます。
+
+
 ```java
 public class MasterCache {
     // ...
@@ -533,10 +538,6 @@ public class MasterCache {
       class="com.github.kazuki43zoo.container.MasterCache"
       destroy-method="clear">
 ```
-
-> **Note:**
->
-> `<beans>`の`default-destroy-method`属性でデフォルトの初期化メソッド(メソッド名)を指定することができる。
 
 
 ## Bean のスコープ
