--- a/memos/ioc-container/02.bean-basic.md
+++ b/memos/ioc-container/02.bean-basic.md
@@ -471,11 +471,12 @@ public class MasterCache {
 ### Beanの破棄用のコールバックインタフェース
 
 コールバックの仕組みは複数あり、以下の順で実行されます。
-
-なお、`prototype`スコープのBeanインスタンスはIoC Container上で管理していないのでコールバックメソッドは呼ばれません。
-
-コールバックの仕組みは複数あり、以下の順で実行されます。
 各コールバックに同じメソッドを指定した場合は、IoC Containerからの呼び出しは一回になります。
+
+> **Note:**
+>
+> `prototype`スコープのBeanインスタンスはIoC Container上で管理していないのでコールバックメソッドは呼ばれません。
+
 
 * `@PreDestroy`
 * `DisposableBean#destroy()`
