--- a/memos/ioc-container/02.bean-basic.md
+++ b/memos/ioc-container/02.bean-basic.md
@@ -410,7 +410,7 @@ Beanの生成と依存性の解決が終了した直後に、ターゲットのB
 * `InitializingBean#afterPropertiesSet()`
 * `<bean>`要素の`init-method`属性 (`@Bean`の`initMethod`属性)
 
-**`@PostConstruct`**
+**`@PostConstruct`を使用して初期化**
 
 初期化メソッドに`@PostConstruct`を付与します。
 
@@ -425,7 +425,7 @@ public class MasterCache {
 }
 ```
 
-**`InitializingBean#afterPropertiesSet()`**
+**`InitializingBean#afterPropertiesSet()`を使用して初期化**
 
 `InitializingBean`インタフェースを実装し、`afterPropertiesSet`メソッドに破棄処理を実装します。
 
@@ -444,7 +444,7 @@ public class MasterCache implements InitializingBean {
 ```
 
 
-**`<bean>`要素の`init-method`属性**
+**`<bean>`要素の`init-method`属性を使用して初期化**
 
 `<bean>`要素の`init-method`属性に初期化メソッドのメソッド名を指定します。
 
@@ -482,7 +482,7 @@ public class MasterCache {
 * `DisposableBean#destroy()`
 * `<bean>`要素の`destroy-method`属性 (`@Bean`の`destroyMethod`属性)
 
-**`@PreDestroy`**
+**`@PreDestroy`を使用して破棄**
 
 破棄メソッドに`@PreDestroy`を付与します。
 
@@ -497,7 +497,7 @@ public class MasterCache {
 }
 ```
 
-**`DisposableBean#destroy()`**
+**`DisposableBean#destroy()`を使用して破棄**
 
 `DisposableBean`インタフェースを実装し、`destroy`メソッドに破棄処理を実装します。
 
@@ -515,7 +515,7 @@ public class MasterCache implements DisposableBean {
 }
 ```
 
-**`<bean>`要素の`destroy-method`属性**
+**`<bean>`要素の`destroy-method`属性を使用して破棄**
 
 `<bean>`要素の`init-destroy`属性に破棄化メソッドのメソッド名を指定します。
 
