--- a/memos/ioc-container/01.container-overview.md
+++ b/memos/ioc-container/01.container-overview.md
@@ -208,7 +208,10 @@ testBean.print(); // ★ 取得したBeanの呼び出し
 > Spring MVC(Webアプリケーション用のMVCフレームワーク)やSpring Batch(バッチアプリケーション用のフレームワーク)上でアプリケーションを開発する場合は、`ApplicationContext`のメソッドを直接使用する必要はなく、Dependency Injection(DI)の仕組みを使用して必要なBeanを取得します。
 > エントリーポイントとなるBeanの取得とメソッドの呼び出しは、フレームワーク側の機能で行ってくれます。
 
-## FactoryBeanPostProcessor
+## `BeanPostFactoryProcessor`を使用した`ApplicationContext`の拡張
+
+`BeanPostFactoryProcessor`は、`ApplicationContext`が読み取ったメタデータを操作(カスタマイズ)するためのインタフェースです。
+
 
 
 
