--- a/memos/ioc-container/02.bean.md
+++ b/memos/ioc-container/02.bean.md
@@ -1,4 +1,4 @@
-# Beanの概要
+# Bean
 
 SpringのIoC Containerは、bean定義ファイル・コンフィギュレーションクラス、アノテーションに定義されているメタデータを読み取り、読み取ったメタデータに基づいてオブジェクトのインスタンス生成やオブジェクト間の依存関係の解決などの処理を行います。
 SpringのIoC Containerでは、コンテナ内で管理しているオブジェクトのことを「Bean」と呼びます。
