--- a/memos/ioc-container/01.container.md
+++ b/memos/ioc-container/01.container.md
@@ -208,11 +208,43 @@ testBean.print(); // ★ 取得したBeanの呼び出し
 > Spring MVC(Webアプリケーション用のMVCフレームワーク)やSpring Batch(バッチアプリケーション用のフレームワーク)上でアプリケーションを開発する場合は、`ApplicationContext`のメソッドを直接使用する必要はなく、Dependency Injection(DI)の仕組みを使用して必要なBeanを取得します。
 > エントリーポイントとなるBeanの取得とメソッドの呼び出しは、フレームワーク側の機能で行ってくれます。
 
-## `BeanPostFactoryProcessor`を使用した`ApplicationContext`の拡張
+## `BeanPostFactoryProcessor`を使用したメタデータのカスタマイズ
 
-`BeanPostFactoryProcessor`は、`ApplicationContext`が読み取ったメタデータを操作(カスタマイズ)するためのインタフェースです。
+`BeanFactoryPostProcessor`は、コンフィギュレーションクラス、アノテーション、bean定義ファイルから読み取ったメタデータでベース作成された`ApplicationContext`をカスタマイズするためのインタフェースで、Springのフレームワーク処理機能を実現するためにも使用されています。
+Springが提供している主な実装クラスは以下の通りです。
+
+| Class | Description | Order |
+| ----- | ----------- | ----- |
+| `ConfigurationClassPostProcessor` | `@Configuration`が付与されたクラスからメタデータを読み取るための実装クラスです。 | PriorityOrdered.LOWEST_PRECEDENCE (固定) |
+| `PropertySourcesPlaceholderConfigurer` | プレースフォルダー(`${..}`)をプロパティ(プロパティファイル、システムプロパティ、環境変数)で置換(プロパティ値のインジェクション)するための実装クラスです。Spring 3.1から追加されたクラスで、`PropertyPlaceholderConfigurer`の後継クラスです。 | PriorityOrdered.LOWEST_PRECEDENCE (変更可能) |
+| `PropertyPlaceholderConfigurer` | プレースフォルダー(`${..}`)をプロパティ(プロパティファイル、システムプロパティ、環境変数)で置換(プロパティ値のインジェクション)するための実装クラスです。Spring 3.0までデフォルトで使用されていました。 | PriorityOrdered.LOWEST_PRECEDENCE (変更可能) |
+| `PropertyOverrideConfigurer` | プロパティファイルに定義されている値を、ネーミングルールベースでBeanのプロパティにインジェクションするための実装クラスです。 | PriorityOrdered.LOWEST_PRECEDENCE (変更可能) |
+| `AspectJWeavingEnabler` | AspectJのLTW(Load-time weaving)を有効化するための実装クラスです。 | Ordered.HIGHEST_PRECEDENCE |
+| `CustomAutowireConfigurer` | `@Qualifier`のメタアノテーションではないカスタムアノテーションを、Qualifierのアノテーションとして扱うための実装クラスです。 | Ordered.LOWEST_PRECEDENCE (変更可能) |
+| `CustomEditorConfigurer` | カスタムの`PropertyEditor`を`ApplicationContext`に登録するための実装クラスです。 | Ordered.LOWEST_PRECEDENCE (変更可能) |
+| `CustomScopeConfigurer` | カスタムのbeanスコープを`ApplicationContext`に登録するための実装クラスです。 | Ordered.LOWEST_PRECEDENCE (変更可能) |
+| `DeprecatedBeanWarner` | `@Deprecated`が付与されたクラス(非推奨クラス)がBean定義されていた場合に警告ログを出力するための実装クラスです。 | \- |
 
 
+* ``BeanFactoryPostProcessor``の実装例
+
+```java
+public class DebugBeanFactoryPostProcessor implements BeanFactoryPostProcessor, Ordered {
+
+    public void postProcessBeanFactory(ConfigurableListableBeanFactory beanFactory) throws BeansException {
+        // ...
+    }
+
+    public int getOrder() {
+        return Ordered.LOWEST_PRECEDENCE;
+    }
+```
+
+> **Note:**
+>
+> 呼び出し順番を制御したい場合は、`Ordered`インタフェースを実装する必要があります。
+> また、`Ordered`インタフェースの実装クラスより確実に前に実行したい場合は、`PriorityOrdered`インタフェースを実装することで実現できます。
+> ただし、`PriorityOrdered`はSpringのフレームワーク機能も使っているので、フレームワーク機能より前に実行することでフレームワークの動作が変わってしまう可能性がある点に注意してください。
 
 
 ## コンテナの起動及び停止時のコールバックインタフェース
