--- a/memos/ioc-container/01.container.md
+++ b/memos/ioc-container/01.container.md
@@ -208,7 +208,7 @@ testBean.print(); // ★ 取得したBeanの呼び出し
 > Spring MVC(Webアプリケーション用のMVCフレームワーク)やSpring Batch(バッチアプリケーション用のフレームワーク)上でアプリケーションを開発する場合は、`ApplicationContext`のメソッドを直接使用する必要はなく、Dependency Injection(DI)の仕組みを使用して必要なBeanを取得します。
 > エントリーポイントとなるBeanの取得とメソッドの呼び出しは、フレームワーク側の機能で行ってくれます。
 
-## `BeanPostFactoryProcessor`を使用したメタデータのカスタマイズ
+## `BeanPostFactoryProcessor`を使用した`ApplicationContext`(メタデータ)のカスタマイズ
 
 `BeanFactoryPostProcessor`は、コンフィギュレーションクラス、アノテーション、bean定義ファイルから読み取ったメタデータでベース作成された`ApplicationContext`をカスタマイズするためのインタフェースで、Springのフレームワーク処理機能を実現するためにも使用されています。
 Springが提供している主な実装クラスは以下の通りです。
