--- a/memos/ioc-container/03.dependency-injection.md
+++ b/memos/ioc-container/03.dependency-injection.md
@@ -48,7 +48,7 @@ public class ParentBean {
 
 > **Note:**
 >
-> コンフィギュレーションクラスで同じことを実現しようとすると・・
+> Configurationクラスで同じことを実現しようとすると・・
 >
 > ```java
 > @Bean
@@ -105,7 +105,7 @@ public class ParentBean {
 
 > **Note:**
 >
-> コンフィギュレーションクラスで同じことを実現しようとすると・・
+> Configurationクラスで同じことを実現しようとすると・・
 >
 > ```java
 > @Bean
@@ -129,7 +129,7 @@ public class ParentBean {
 > **Note:**
 >
 > フィールドインジェクションを使う場合は、アノテーションからBeanを生成するためのメタデータを読み取れるようになっている必要があります。
-> コンフィギュレーションクラスを使う場合(`AnnotationConfigApplicationContext`や`AnnotationConfigWebApplicationContext`を使用する場合)は特に何も必要ありませんが、bean定義ファイルを使う場合は設定が必要です。
+> Configurationクラスを使う場合(`AnnotationConfigApplicationContext`や`AnnotationConfigWebApplicationContext`を使用する場合)は特に何も必要ありませんが、bean定義ファイルを使う場合は設定が必要です。
 >
 > ```xml
 > <context:annotation-config />
@@ -458,7 +458,7 @@ Springは以下のルール(モード)に基づいてインジェクションす
 | `constructor` | コンストラクタ引数の型と同じ型(キャスト可能な型)のBeanをインジェクションします。基本的には`byType`と同じ動きになりますが、インジェクション対象のBeanがみつからない場合はエラーになります。 |
 
 
-**コンフィギュレーションクラスでの指定**
+**Configurationクラスでの指定**
 
 モードは、`@Bean`の`autowire`属性で変更することができます。
 
