--- a/memos/ioc-container/02.bean-definition.md
+++ b/memos/ioc-container/02.bean-definition.md
@@ -1,16 +1,16 @@
-# Bean
+# Bean定義
 
-SpringのIoC Containerは、bean定義ファイル・Configurationクラス、アノテーションに定義されているメタデータを読み取り、読み取ったメタデータに基づいてオブジェクトのインスタンス生成やオブジェクト間の依存関係の解決などの処理を行います。
-SpringのIoC Containerでは、コンテナ内で管理しているオブジェクトのことを「Bean」と呼びます。
+SpringのIoC Containerでは、コンテナ内で管理しているオブジェクトのことを「Bean」と呼び、Beanを生成するために必要となるメタデータをbean定義ファイル・Configurationクラス、アノテーションに定義されているメタデータから読み取ります。
+読み取ったメタデータに基づいてオブジェクトのインスタンス生成やオブジェクト間の依存関係の解決などの処理を行います。
 
 「Bean」を生成するための主なメタデータは以下の通りです。
 これらのメタデータは、`BeanDefinition`インタフェースで表現され、IoC Containerで管理されます。
 
-* IoC Containerに登録するBean名(Alias)
+* IoC Containerに登録するBean名やAlias
 * Beanのカテゴリ化(qualifier)
 * Beanの生成方法(コンストラクタ？ファクトリメソッド？`FactoryBean`？)
 * Beanのスコープ(シングルトン？プロトタイプ？...)
-* 依存Beanの解決方法(コンストラクタ？セッター？オートワイヤ？)
+* 依存Beanの解決方法(コンストラクタ？セッター？オートワイヤ？...)
 * Beanのライフサイクルコールバックメソッド(初期化メソッドは？破棄メソッドは？)
 * 遅延ロード？
 * etc..
