Add BeanPostProcessor in Bean definition

--- a/memos/ioc-container/01.container.md
+++ b/memos/ioc-container/01.container.md
@@ -278,7 +278,7 @@ testBean.print(); // ★ 取得したBeanの呼び出し
 
 ## `BeanPostFactoryProcessor`を使用した`ApplicationContext`(メタデータ)のカスタマイズ
 
-`BeanFactoryPostProcessor`は、Configurationクラス、アノテーション、bean定義ファイルから読み取ったメタデータでベース作成された`ApplicationContext`をカスタマイズするためのインタフェースで、Springのフレームワーク処理機能を実現するためにも使用されています。
+`BeanFactoryPostProcessor`は、Configurationクラス、アノテーション、bean定義ファイルから読み取ったメタデータでベース作成された`ApplicationContext`をカスタマイズするためのインタフェースで、Springのフレームワーク処理を実現するためにも使用されています。
 Springが提供している主な実装クラスは以下の通りです。
 
 | Class | Description | Order |
