--- a/memos/ioc-container/02.bean-definition.md
+++ b/memos/ioc-container/02.bean-definition.md
@@ -658,4 +658,54 @@ public class TestBean {
 > あとで・・・ `<bean>`要素の`default-xxxx`属性について記載。
 
 
-## BeanPostProcessor
+## `BeanPostProcessor`を使用したBeanインスタンスのカスタマイズ
+
+`BeanPostProcessor`は、コンテナによって生成されたBeanインスタンスの状態をカスタマイズするためのインタフェース、Springのフレームワーク処理を実現するためにも使用されています。
+
+`BeanPostProcessor`は以下の２つのメソッドが定義されていて、Beanの初期化用のコールバックインタフェースの呼び出し前後に処理を加えることでBeanの状態をカスタマイズすることができます。
+
+```java
+package org.springframework.beans.factory.config;
+public interface BeanPostProcessor {
+    Object postProcessBeforeInitialization(Object bean, String beanName) throws BeansException;
+    Object postProcessAfterInitialization(Object bean, String beanName) throws BeansException;
+}
+```
+
+| Method | Description |
+| :---: | ----------- |
+| `postProcessBeforeInitialization` | Beanの初期化用のコールバックインタフェース(メソッド)を呼び出す前に呼び出されるメソッドです。 |
+| `postProcessAfterInitialization` | Beanの初期化用のコールバックインタフェース(メソッド)を呼び出した後に呼び出されるメソッドです。 |
+
+* `BeanPostProcessor`の実装例
+
+```java
+public class DebugBeanPostProcessor implements BeanPostProcessor, Ordered {
+
+    @Override
+    public Object postProcessBeforeInitialization(Object bean, String beanName) throws BeansException {
+        // ...
+        return bean;
+    }
+
+    @Override
+    public Object postProcessAfterInitialization(Object bean, String beanName) throws BeansException {
+        // ...
+        return bean;
+    }
+
+    @Override
+    public int getOrder() {
+        return Ordered.LOWEST_PRECEDENCE;
+    }
+
+}
+```
+
+> **Note:**
+>
+> 呼び出し順番を制御したい場合は、`Ordered`インタフェースを実装する必要があります。
+> また、`Ordered`インタフェースの実装クラスより確実に前に実行したい場合は、`PriorityOrdered`インタフェースを実装することで実現できます。
+> ただし、`PriorityOrdered`はSpringのフレームワーク機能も使っているので、フレームワーク機能より前に実行することでフレームワークの動作が変わってしまう可能性がある点に注意してください。
+
+
