Inprove about scope of BeanPostProcessor and BeanFactoryPostProcessir

--- a/memos/ioc-container/01.container.md
+++ b/memos/ioc-container/01.container.md
@@ -313,6 +313,8 @@ public class DebugBeanFactoryPostProcessor implements BeanFactoryPostProcessor, 
 > 呼び出し順番を制御したい場合は、`Ordered`インタフェースを実装する必要があります。
 > また、`Ordered`インタフェースの実装クラスより確実に前に実行したい場合は、`PriorityOrdered`インタフェースを実装することで実現できます。
 > ただし、`PriorityOrdered`はSpringのフレームワーク機能も使っているので、フレームワーク機能より前に実行することでフレームワークの動作が変わってしまう可能性がある点に注意してください。
+>
+> また、`BeanFactoryPostProcessor`が適用されるBeanは同じコンテナ内のBeanのみです。これは親子関係があるコンテキストの場合、親のコンテキストに`BeanPostProcessor`を定義しても子のコンテキストで管理されるBeanには適用されないことを意味しています。
 
 
 ## コンテナの起動及び停止時のコールバックインタフェース
