--- a/memos/ioc-container/02.bean-definition.md
+++ b/memos/ioc-container/02.bean-definition.md
@@ -653,6 +653,15 @@ public class TestBean {
 
 ## デフォルトのメタデータの定義
 
+bean定義ファイルを使用する場合、以下のメタデータに対してデフォルト値を指定することができます。
+
+
+| Meta data | Description | Default |
+| --------- | ----------- | ------- |
+| application | サーブレットコンテキスト毎にインスタンスを生成しキャッシュするスコープです。 |
+
+
+
 > **Sorry:**
 >
 > あとで・・・ `<bean>`要素の`default-xxxx`属性について記載。
@@ -707,5 +716,7 @@ public class DebugBeanPostProcessor implements BeanPostProcessor, Ordered {
 > 呼び出し順番を制御したい場合は、`Ordered`インタフェースを実装する必要があります。
 > また、`Ordered`インタフェースの実装クラスより確実に前に実行したい場合は、`PriorityOrdered`インタフェースを実装することで実現できます。
 > ただし、`PriorityOrdered`はSpringのフレームワーク機能も使っているので、フレームワーク機能より前に実行することでフレームワークの動作が変わってしまう可能性がある点に注意してください。
+>
+> また、`BeanPostProcessor`が適用されるBeanは同じコンテナ内のBeanのみです。これは親子関係があるコンテキストの場合、親のコンテキストに`BeanPostProcessor`を定義しても子のコンテキストで管理されるBeanには適用されないことを意味しています。
 
 
