Add default-xxx of beans element

--- a/memos/ioc-container/02.bean-definition.md
+++ b/memos/ioc-container/02.bean-definition.md
@@ -653,19 +653,33 @@ public class TestBean {
 
 ## デフォルトのメタデータの定義
 
-bean定義ファイルを使用する場合、以下のメタデータに対してデフォルト値を指定することができます。
-
+bean定義ファイルを使用する場合、`<beans>`要素の属性にメタデータのデフォルト値を指定することができます。
+なお、ここで指定した値は、`<bean>`要素で上書きすることができます。
 
 | Meta data | Description | Default |
 | --------- | ----------- | ------- |
-| application | サーブレットコンテキスト毎にインスタンスを生成しキャッシュするスコープです。 |
+| `default-autowire` | デフォルトのオートワイアのモードを指定するための属性です。 | `default`(`no`) |
+| `default-autowire-candidates` | オートワイア対象のBeanとして扱うBean名のパターンを指定するための属性です。パターンはカンマ区切りで複数指定することができます。 | \- |
+| `default-destroy-method` | デフォルトのBeanの初期化用のコールバックメソッドを指定するための属性です。 | \- |
+| `default-init-method` | デフォルトのBeanの破棄用のコールバックメソッドを指定するための属性です。 | \- |
+| `default-lazy-init` | デフォルトの遅延初期化(Lazy init)フラグを指定するための属性です。 | `default` |
+| `default-merge` | デフォルトのコレクションのマージフラグを指定するための属性です。 | `default`(`false`) |
 
-
-
-> **Sorry:**
->
-> あとで・・・ `<bean>`要素の`default-xxxx`属性について記載。
-
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+       xsi:schemaLocation="http://www.springframework.org/schema/beans
+        http://www.springframework.org/schema/beans/spring-beans.xsd"
+       default-autowire="constructor"
+       default-autowire-candidates="*Service*,*Repository*"
+       default-destroy-method="destroy"
+       default-init-method="init"
+       default-lazy-init="true"
+       default-merge="true">
+    <!-- ... -->
+</beans>
+```
 
 ## `BeanPostProcessor`を使用したBeanインスタンスのカスタマイズ
 
