Improve bean lifecycle callback interface(method)

--- a/memos/ioc-container/02.bean-definition.md
+++ b/memos/ioc-container/02.bean-definition.md
@@ -138,10 +138,17 @@ public class TestBeanFactory {
 
 `<bean>`要素の`class`属性に`FactoryBean`インタフェースを実装したクラスのクラス名(FQCN)を指定すると、指定したクラスの`getObject()`メソッドを呼び出してBeanを生成します。
 
+`FactoryBean`を使用すると、XMLで表現できない複雑なインスタン生成処理をJavaのコードを使って実装することができます。
+
+* Beanとして扱うインスンスは`getObject()`メソッドの返り値として返却します。
+* Beanインスタンスの型を`getObjectType()`メソッドの返り値として返却します。返却する型が動的にかわる場合(事前に決定できない場合)は`null`を返却します。
+* `getObject()`メソッドで返却するインスタンスがシングルトンの場合は`true`を返却します。
+
 ```java
 public class TestBeanFactoryBean implements FactoryBean<TestBean> {
+    private TestBean testBean = new TestBean();
     public TestBean getObject() {
-        return new TestBean();
+        return testBean;
     }
     public Class<?> getObjectType() {
         return TestBean.class;
@@ -151,6 +158,9 @@ public class TestBeanFactoryBean implements FactoryBean<TestBean> {
     }
 }
 ```
+
+`TestBeanFactoryBean#getObject()`から返却されたインスタンスが、`testBean`という名前でBeanとしてコンテナに登録されます。
+ちなみに・・・`FactoryBean`自体のインスタンスは`&testBean`(`"&"` + Bean名)という名前でコンテナから取得することができます。
 
 ```xml
 <bean id="testBean" class="com.github.kazuki43zoo.container.TestBeanFactoryBean"/>
@@ -166,6 +176,9 @@ public class TestBeanFactoryBean implements FactoryBean<TestBean> {
 >     return new TestBeanFactoryBean();
 > }
 > ```
+> 
+> ただし、Configuratioクラスを使ってインスタンスを生成する場合は、`FactoryBean`をわざわざ実装するのではなく、`@Bean`メソッドの中でインスタンスを生成する処理を書くことができます。
+> インスタンスの生成処理を複数箇所で共有したい場合は、`FactoryBean`を使うとよいと思います。
 
 
 ### Beanインスタンスの生成タイミング
@@ -468,19 +481,31 @@ public class MasterCache {
       init-method="load">
 ```
 
+or 
+
+```java
+@Bean(initMethod="load")
+public MasterCache masterCache() {
+    return new MasterCache();
+}
+```
+
 ### Beanの破棄用のコールバックインタフェース
 
 コールバックの仕組みは複数あり、以下の順で実行されます。
 各コールバックに同じメソッドを指定した場合は、IoC Containerからの呼び出しは一回になります。
 
-> **Note:**
->
-> `prototype`スコープのBeanインスタンスはIoC Container上で管理していないのでコールバックメソッドは呼ばれません。
-
-
 * `@PreDestroy`
 * `DisposableBean#destroy()`
 * `<bean>`要素の`destroy-method`属性 (`@Bean`の`destroyMethod`属性)
+
+
+> **Note:**
+>
+> `prototype`スコープのBeanインスタンスはIoC Container上で管理していないのでコールバックメソッドは呼ばれません。
+>
+> `DisposableBean#destroy()`と`<bean>`要素の`destroy-method`属性 (`@Bean`の`destroyMethod`属性)の指定がないケースにかぎり、`java.lang.AutoCloseable`又は`java.io.Closeable`を実装すると`close()`メソッドが呼び出されます。
+> これは、明示的に破棄メソッドを指定しなくても、`java.lang.AutoCloseable`又は`java.io.Closeable`を実装していれば破棄処理が実行されることを意味しています。
 
 **`@PreDestroy`を使用して破棄**
 
@@ -539,6 +564,21 @@ public class MasterCache {
       class="com.github.kazuki43zoo.container.MasterCache"
       destroy-method="clear">
 ```
+
+or
+
+```java
+@Bean(destroyMethod = "clear")
+public MasterCache masterCache() {
+    return new MasterCache();
+}
+```
+
+> **Note:**
+>
+> 属性値に`"(inferred)"`という予約値を指定すると、`close()`メソッド又は`shutodown()`メソッドがあると破棄メソッドとして扱われます。両方のメソッドがあった場合は、`close()`メソッドが破棄メソッドとして扱われます。
+>
+> `@Bean`の`destroyMethod`属性のデフォルト値は、`"(inferred)"`です。`close()`メソッド又は`shutodown()`メソッドを破棄メソッドとして自動検知させたくない場合は、`@Bean(destroyMethod = "")`を指定してください。
 
 
 ## Bean のスコープ
