Improve annotation based configuration

--- a/memos/ioc-container/02.bean-definition.md
+++ b/memos/ioc-container/02.bean-definition.md
@@ -438,6 +438,22 @@ public class MasterCache {
 }
 ```
 
+> **Note:**
+>
+> `@PostConstruct`を使用する場合は、アノテーションを使用したbean定義を有効にする必要があります。
+> なお、Configurationクラスを指定してSpringのIoC Containerを生成する場合は、デフォルトで有効になっています。
+>
+> ```xml
+> <context:annotation-config/>
+> ```
+>
+> or
+>
+> ```xml
+> <context:component-scan base-package="com.github.kazuki43zoo.container"/>
+> ```
+
+
 **`InitializingBean#afterPropertiesSet()`を使用して初期化**
 
 `InitializingBean`インタフェースを実装し、`afterPropertiesSet`メソッドに破棄処理を実装します。
@@ -521,6 +537,22 @@ public class MasterCache {
     // ...
 }
 ```
+
+> **Note:**
+>
+> `@PreDestroy`を使用する場合は、アノテーションを使用したbean定義を有効にする必要があります。
+> なお、Configurationクラスを指定してSpringのIoC Containerを生成する場合は、デフォルトで有効になっています。
+>
+> ```xml
+> <context:annotation-config/>
+> ```
+>
+> or
+>
+> ```xml
+> <context:component-scan base-package="com.github.kazuki43zoo.container"/>
+> ```
+
 
 **`DisposableBean#destroy()`を使用して破棄**
 
