Improve annotation based configuration

--- a/memos/ioc-container/02.bean-definition.md
+++ b/memos/ioc-container/02.bean-definition.md
@@ -423,7 +423,7 @@ Beanの生成と依存性の解決が終了した直後に、ターゲットのB
 * `InitializingBean#afterPropertiesSet()`
 * `<bean>`要素の`init-method`属性 (`@Bean`の`initMethod`属性)
 
-**`@PostConstruct`を使用して初期化**
+#### `@PostConstruct`を使用して初期化
 
 初期化メソッドに`@PostConstruct`を付与します。
 
@@ -454,7 +454,7 @@ public class MasterCache {
 > ```
 
 
-**`InitializingBean#afterPropertiesSet()`を使用して初期化**
+#### `InitializingBean#afterPropertiesSet()`を使用して初期化
 
 `InitializingBean`インタフェースを実装し、`afterPropertiesSet`メソッドに破棄処理を実装します。
 
@@ -473,7 +473,7 @@ public class MasterCache implements InitializingBean {
 ```
 
 
-**`<bean>`要素の`init-method`属性を使用して初期化**
+#### `<bean>`要素の`init-method`属性を使用して初期化
 
 `<bean>`要素の`init-method`属性に初期化メソッドのメソッド名を指定します。
 
@@ -523,7 +523,7 @@ public MasterCache masterCache() {
 > `DisposableBean#destroy()`と`<bean>`要素の`destroy-method`属性 (`@Bean`の`destroyMethod`属性)の指定がないケースにかぎり、`java.lang.AutoCloseable`又は`java.io.Closeable`を実装していると`close()`メソッドが呼び出されます。
 > これは、明示的に破棄メソッドを指定しなくても、`java.lang.AutoCloseable`又は`java.io.Closeable`を実装していると破棄処理(`close()`メソッド)が実行されることを意味しています。
 
-**`@PreDestroy`を使用して破棄**
+#### `@PreDestroy`を使用して破棄
 
 破棄メソッドに`@PreDestroy`を付与します。
 
@@ -554,7 +554,7 @@ public class MasterCache {
 > ```
 
 
-**`DisposableBean#destroy()`を使用して破棄**
+#### `DisposableBean#destroy()`を使用して破棄
 
 `DisposableBean`インタフェースを実装し、`destroy`メソッドに破棄処理を実装します。
 
@@ -572,7 +572,7 @@ public class MasterCache implements DisposableBean {
 }
 ```
 
-**`<bean>`要素の`destroy-method`属性を使用して破棄**
+#### `<bean>`要素の`destroy-method`属性を使用して破棄
 
 `<bean>`要素の`init-destroy`属性に破棄化メソッドのメソッド名を指定します。
 
