--- a/memos/ioc-container/02.bean-definition.md
+++ b/memos/ioc-container/02.bean-definition.md
@@ -849,6 +849,78 @@ bean定義は、Javaのクラス定義のように継承関係も持たせるこ
 > 親のbean定義で指定したメタデータは、子のbean定義で上書きすることができます。
 
 
-## Beanの自動スキャン
+## Beanのスキャン
 
+IoC Container上で管理するBeanは、クラスパス上にあるクラスからスキャンすることができます。
+
+Beanのスキャン機能を利用すると、Configurationクラスやbean定義ファイルで定義するBeanの数を大幅に削除することができます。
+
+### スキャン対象
+
+Beanのスキャン機能(コンポーネントスキャン機能)のデフォルトの動作では、ステレオタイプアノテーション及びステレオタイプアノテーションを保持するメタアノテーションが付与されたクラスをスキャン対象とします。
+
+ステレオタイプアノテーションとは、クラスが果たす役割を分類するためのアノテーションで、`org.springframework.stereotype`パッケージに格納されているアノテーションのことをさします。
+
+具体的には、以下のアノテーションがステレオタイプアノテーションです。
+
+| Annotation | Description |
+| ---------- | ----------- |
+| `@Repository` | データアクセスを行うクラスに指定するアノテーションです。 (`@Component`のメタアノテーション) |
+| `@Service` | ビジネスロジックを行うクラスに指定するアノテーションです。 (`@Component`のメタアノテーション) |
+| `@Controller` | リクエストのハンドリングを行うクラス指定するアノテーションです。 (`@Component`のメタアノテーション) |
+| `@Component` | 上記の分類に該当しないクラスに指定するアノテーションです。 |
+
+また、以下のアノテーションがステレオタイプアノテーションのメタアノテーションです。
+
+| Annotation | Description |
+| ---------- | ----------- |
+| `@Configuration` | Configuratioクラスに指定するアノテーションです。(`@Component`のメタアノテーション) |
+| `@ControllerAdvice` | ビジネスロジックを行うクラスに指定するアノテーションです。(`@Component`のメタアノテーション)  |
+| `@RestController` | リクエストのハンドリングを行うクラス指定するアノテーションです。(`@Controller`のメタアノテーション) |
+
+
+> **Note:**
+>
+> JSR-250の`@ManagedBean`とJSR-330の`@Named`が付与されたクラスもスキャン対象になります。
+
+
+### スキャン
+
+スキャン対象のクラスを実際にスキャンしてIoC Container上のBeanとして登録する場合は、`@ComponentScan`又は `<context:component-scan>`要素を使用します。
+
+#### Configurationクラスを使用したスキャン
+
+Configurationクラスに`@ComponentScan`を指定します。
+
+以下のいずれかの属性を使用して、クラスをスキャンするベースパッケージを指定できます。
+
+* `value`属性
+* `basePackages`属性
+* `basePackageClasses`属性
+
+
+```java
+@Configuration
+@ComponentScan("io.github.kazuki43zoo") // ★
+public class AppConfig {
+    // ...
+}
+```
+
+属性をすべて省略した場合は、Configurationクラスが格納されているパッケージがベースパッケージとして使用されます。
+
+```java
+package io.github.kazuki43zoo;
+
+@Configuration
+@ComponentScan // ★
+public class AppConfig {
+    // ...
+}
+```
+
+
+#### bean定義ファイルを使用したスキャン
+
+bean 定義ファイルに`<context:component-scan>` 要素を指定します。
 
