--- a/memos/ioc-container/02.bean-definition.md
+++ b/memos/ioc-container/02.bean-definition.md
@@ -920,6 +920,10 @@ public class AppConfig {
 }
 ```
 
+> **Note:**
+>
+> 個人的には、スキャンしたいコンポーネントが格納されているベースパッケージ上にConfigurationクラスを作成して、ベースパッケージを指定する属性を省略するのが好きです。
+
 
 #### bean定義ファイルを使用したスキャン
 
